---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2022-08-08
  Bugfixes:
    - Fixed crash when player places a bluperint using blueprint book from inventory.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2022-08-07
  Bugfixes:
    - Fixed placeholders staying behind when canceling deconstruction of entities that do not overlap with the placeholder entity itself.
    - Fixed placeholders staying behind when "quick-building" rails.
    - Fixed undo queue with unapproved ghosts not being preserved correctly when canceling deconstruction.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-08-03
  Features:
    - Unapproved underground belts and their non-unapproved counterparts can now be rotated together, with some caveats in logic.
  Bugfixes:
    - Fixed underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
    - Fixed underground belt not pairing-up correctly with existing unapproved underground belts.
    - Fixed (hard) crash when undoing changes after the deconstruction planner has been used against area with tiles.
    - Fixed tiles getting deconstruction orders when using deconstruction planner.
    - Fixed accidental approvals when drag-building "gappable" entities (underground belts an pipes, electric poles) over unapproved ghosts.
    - Fixed placeholders staying behind when player is building on top of unapproved ghosts if replacement entity does not have the same center as the unapproved ghost.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-31