@@ -2,8 +2,10 @@
 Version: 999.999.999
 Date: 9999-99-99
   Changes:
+    - Deconstruction planners from library no longer deconstruct unapproved ghosts.
   Features:
   Bugfixes:
+    - Fixed crash when player deconstructs area with deconstruction planner from game/player library due to mismatch between deconstruction force and player force.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2022-08-08
